kubernetes-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demoapp          
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/demo/demoapp:latest
        imagePullPolicy: Always
        name: demoapp
        ports:
        - containerPort: 8080
          protocol: TCP
