kubernetes-files/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demoapp
spec:
  host: demoapp-demo-test.apps.beta.rhepds.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: demoapp
    weight: 100
  wildcardPolicy: None
